# pgdelta

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  security.yml
api/cli/: index.html
api/planned/: index.html
api/python/: index.html
architecture/: index.html
contributing/adding-entities/: index.html
contributing/setup/: index.html
debug/: diff-headless.sh
dependency-resolution/: index.html
docs/: architecture.md  dependency-resolution.md  index.md
docs/api/: cli.md  planned.md  python.md
docs/contributing/: adding-entities.md  setup.md
docs/entities/: constraints.md  functions.md  indexes.md  materialized-views.md  overview.md  policies.md  schemas.md  sequences.md  tables.md  triggers.md  types.md  views.md
entities/constraints/: index.html
entities/functions/: index.html
entities/indexes/: index.html
entities/materialized-views/: index.html
entities/overview/: index.html
entities/policies/: index.html
entities/schemas/: index.html
entities/sequences/: index.html
entities/tables/: index.html
entities/triggers/: index.html
entities/types/: index.html
entities/views/: index.html
scripts/: check_architecture.py
search/: search_index.json
src/pgdelta/: __init__.py  catalog.py  dependency_resolution.py  exceptions.py
src/pgdelta/changes/: __init__.py  dispatcher.py
src/pgdelta/changes/constraint/: __init__.py  alter.py  create.py  drop.py
src/pgdelta/changes/function/: __init__.py  create.py  drop.py  replace.py
src/pgdelta/changes/index/: __init__.py  alter.py  create.py  drop.py
src/pgdelta/changes/materialized_view/: __init__.py  create.py  drop.py  replace.py
src/pgdelta/changes/policy/: __init__.py  alter.py  create.py  drop.py
src/pgdelta/changes/schema/: __init__.py  create.py  drop.py
src/pgdelta/changes/sequence/: __init__.py  alter.py  create.py  drop.py
src/pgdelta/changes/table/: __init__.py  alter.py  create.py  drop.py
src/pgdelta/changes/trigger/: __init__.py  create.py  drop.py
src/pgdelta/changes/type/: __init__.py  alter.py  create.py  drop.py
src/pgdelta/changes/view/: __init__.py  create.py  drop.py  replace.py
src/pgdelta/cli/: __init__.py  main.py
src/pgdelta/diff/: __init__.py  orchestrator.py  pg_class_diff.py  pg_constraint_diff.py  pg_index_diff.py  pg_namespace_diff.py  pg_policy_diff.py  pg_proc_diff.py  pg_sequence_diff.py  pg_trigger_diff.py  pg_type_diff.py
src/pgdelta/model/: __init__.py  base.py  pg_attribute.py  pg_class.py  pg_constraint.py  pg_depend.py  pg_index.py  pg_namespace.py  pg_policy.py  pg_proc.py  pg_sequence.py  pg_trigger.py  pg_type.py
tests/: conftest.py
tests/cli/: test_main.py
tests/integration/: roundtrip.py  test_alter_table_operations.py  test_constraint_operations.py  test_function_operations.py  test_index_operations.py  test_materialized_view.py  test_mixed_objects.py  test_policy_dependencies.py  test_rls_operations.py  test_sequence_operations.py  test_table_operations.py  test_trigger_operations.py  test_type_operations.py  test_view_operations.py
tests/unit/: test_base_model.py  test_catalog_extraction.py  test_constraint_sql_generation.py  test_dependency_coverage.py  test_dependency_resolution_coverage.py  test_dependency_visibility.py  test_diff_engine_alterations.py  test_diff_functions.py  test_dispatcher_edge_cases.py  test_model_properties.py  test_semantic_equality.py  test_type_diff.py  test_type_extraction.py  test_view_dependencies_extraction.py  test_view_diff_functions.py
tests/unit/sql_generation/: test_dispatcher.py  test_index.py  test_materialized_view_unit.py  test_policy.py  test_policy_alter.py  test_schema.py  test_sequence.py  test_table_alter.py  test_table_create.py  test_table_drop.py  test_trigger.py  test_type.py  test_view_drop.py  test_view_replace.py
